# HackBelfast_MedAgent

./: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  Hackathon_Cheat_Sheet.md  IMESSAGE_INTEGRATION_PROMPT.md  MEDAGENT_BUILD_SPEC.md  README.md  package-lock.json  test-clear.ts
.claude/: settings.local.json
.references/: hedera-agent-kit-blog.html  hedera-agent-lab-docs.html  hedera-ai-studio.html  hedera-mcp.html  portal-hedera.html
medagent/: .env.local.example  .gitignore  AGENTS.md  README.md  layout.css  next.config.mjs  package-lock.json  package.json  page.html  tailwind.config.ts  vitest.config.ts
medagent/app/: AGENTS.md  error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
medagent/components/: AGENTS.md
medagent/docs/: AGENTS.md  agentic-design.md  competitive-landscape.md  demo-script.md  imessage-flow.md  judge-evidence-matrix.md  lean-canvas.md  market-feedback.md  market-sizing.md  network-impact.md  partner-notes.md  pitch-outline.md  q-and-a.md
medagent/hooks/: AGENTS.md
medagent/lib/: AGENTS.md  appUrl.ts  contactPhone.ts  crypto.ts  db.ts  patientDashboardVersion.ts  qr.ts  types.ts
medagent/scripts/: AGENTS.md  demo-flow.ts  demo-readiness.ts  demo-reset.ts  generate-demo-pdfs.ts  imessage-clear-onboarded.ts  imessage-live.ts  imessage-local-poller.ts  imessage-replay.ts  imessage-smoke.ts  run-embedding-bakeoff.ts  run-retrieval-cost-dashboard.ts  run-retrieval-eval.ts  seed-demo.ts  (+2 more)
pitch-deck/: package.json
programs/: AGENTS.md
programs/medagent_audit/: AGENTS.md  Cargo.toml
programs/medagent_audit/src/: lib.rs
(+287 files in other folders)
